--- a/notebook/SLN_Model_top1_acc=92.47_top5_acc=94.92.ipynb
+++ b/notebook/SLN_Model_top1_acc=92.47_top5_acc=94.92.ipynb
@@ -8253,14 +8253,18 @@
         "        self.v = nn.Linear(input_dim, hidden_dim)\n",
         "\n",
         "    def forward(self, x):\n",
-        "        # x: (B, T, N, D)\n",
-        "        q, k, v = self.q(x), self.k(x), self.v(x)\n",
-        "        attn_weights = F.softmax(torch.matmul(q, k.transpose(-2, -1)) / (q.size(-1) ** 0.5), dim=-1)\n",
-        "        out = torch.matmul(attn_weights, v)\n",
-        "        return out.mean(dim=2)\n",
+        "        q = self.q(x)  \n",
+        "        k = self.k(x)\n",
+        "        v = self.v(x)\n",
+        "\n",
+        "        attn_scores = torch.matmul(q, k.transpose(-2, -1)) / (q.size(-1) ** 0.5)  \n",
+        "        attn_weights = F.softmax(attn_scores, dim=-1)  \n",
+        "        attn_output = torch.matmul(attn_weights, v)  \n",
+        "\n",
+        "        return attn_output.mean(dim=2)  \n",
         "\n",
         "# -----------------------------------------\n",
-        "# Temporal Partitioning\n",
+        "# Temporal Partition\n",
         "# -----------------------------------------\n",
         "class TemporalPartition(nn.Module):\n",
         "    def __init__(self, window_size=8, overlap=4):\n",
@@ -8271,40 +8275,58 @@
         "    def forward(self, x):\n",
         "        B, T, D = x.size()\n",
         "        stride = self.window_size - self.overlap\n",
+        "\n",
+        "        if T < self.window_size:\n",
+        "            pad_len = self.window_size - T\n",
+        "            x = F.pad(x, (0, 0, 0, pad_len))  \n",
+        "            T = x.size(1)\n",
+        "\n",
         "        segments = []\n",
         "        for start in range(0, T - self.window_size + 1, stride):\n",
         "            segments.append(x[:, start:start + self.window_size, :])\n",
-        "        return torch.stack(segments, dim=1)\n",
+        "\n",
+        "        if len(segments) == 0:\n",
+        "            segments.append(x[:, -self.window_size:, :])\n",
+        "\n",
+        "        return torch.stack(segments, dim=1)  \n",
         "\n",
         "# -----------------------------------------\n",
-        "# Temporal Attention using BiGRU\n",
+        "# Temporal Attention\n",
         "# -----------------------------------------\n",
         "class TemporalAttention(nn.Module):\n",
-        "    def __init__(self, input_dim, hidden_size):\n",
+        "    def __init__(self, input_dim, hidden_size, attn_dim=128):\n",
         "        super().__init__()\n",
         "        self.gru = nn.GRU(input_dim, hidden_size, batch_first=True, bidirectional=True)\n",
-        "        self.attn = nn.Sequential(\n",
-        "            nn.Linear(2 * hidden_size, 128),\n",
-        "            nn.Tanh(),\n",
-        "            nn.Linear(128, 1)\n",
-        "        )\n",
+        "\n",
+        "        self.q_proj = nn.Linear(2 * hidden_size, attn_dim)\n",
+        "        self.k_proj = nn.Linear(2 * hidden_size, attn_dim)\n",
+        "        self.v_proj = nn.Linear(2 * hidden_size, attn_dim)\n",
         "\n",
         "    def forward(self, segments):\n",
         "        B, S, W, D = segments.shape\n",
-        "        segments = segments.view(B * S, W, D)\n",
-        "        gru_out, _ = self.gru(segments)\n",
-        "        segment_feats = gru_out[:, -1, :]\n",
-        "        segment_feats = segment_feats.view(B, S, -1)\n",
-        "        attn_weights = self.attn(segment_feats).squeeze(-1)\n",
-        "        attn_weights = torch.softmax(attn_weights, dim=-1)\n",
-        "        weighted = torch.sum(segment_feats * attn_weights.unsqueeze(-1), dim=1)\n",
-        "        return weighted\n",
+        "        segments = segments.view(B * S, W, D)  \n",
+        "\n",
+        "        gru_out, _ = self.gru(segments)  \n",
+        "        segment_feats = gru_out[:, -1, :]  \n",
+        "        segment_feats = segment_feats.view(B, S, -1)  \n",
+        "\n",
+        "        Q = self.q_proj(segment_feats)  \n",
+        "        K = self.k_proj(segment_feats)  \n",
+        "        V = self.v_proj(segment_feats)  \n",
+        "\n",
+        "        attn_scores = torch.matmul(Q, K.transpose(-2, -1)) / (Q.size(-1) ** 0.5)  \n",
+        "        attn_weights = F.softmax(attn_scores, dim=-1)  \n",
+        "\n",
+        "        attended = torch.matmul(attn_weights, V)  \n",
+        "        output = attended.mean(dim=1)  \n",
+        "\n",
+        "        return output\n",
         "\n",
         "# -----------------------------------------\n",
-        "# Landmark Transformer (Pose + Hands + Face)\n",
+        "# Landmark Transformer\n",
         "# -----------------------------------------\n",
         "class LandmarkTransformer(nn.Module):\n",
-        "    def __init__(self, input_dim=3, embed_dim=128, hidden_size=128):\n",
+        "    def __init__(self, input_dim=3, embed_dim=128, hidden_size=128, window_size=8, overlap=4):\n",
         "        super().__init__()\n",
         "        self.partition = SpatialPartition()\n",
         "        self.att_left = SpatialAttention(input_dim, embed_dim)\n",
@@ -8312,19 +8334,21 @@
         "        self.att_pose = SpatialAttention(input_dim, embed_dim)\n",
         "        self.att_face = SpatialAttention(input_dim, embed_dim)\n",
         "\n",
-        "        self.temporal_partition = TemporalPartition()\n",
-        "        self.temporal_att = TemporalAttention(embed_dim, hidden_size)\n",
+        "        self.temporal_partition = TemporalPartition(window_size, overlap)\n",
+        "        self.temporal_att = TemporalAttention(embed_dim, hidden_size, attn_dim=embed_dim)\n",
         "\n",
         "    def forward(self, x):\n",
+        "        # x: (B, T, N, D)\n",
         "        left, right, pose, face = self.partition(x)\n",
-        "        left_feat = self.att_left(left)\n",
-        "        right_feat = self.att_right(right)\n",
-        "        pose_feat = self.att_pose(pose)\n",
-        "        face_feat = self.att_face(face)\n",
         "\n",
-        "        combined = left_feat + right_feat + pose_feat + face_feat\n",
-        "        segments = self.temporal_partition(combined)\n",
-        "        final_feat = self.temporal_att(segments)\n",
+        "        left_feat = self.att_left(left)    \n",
+        "        right_feat = self.att_right(right)   \n",
+        "        pose_feat = self.att_pose(pose)      \n",
+        "        face_feat = self.att_face(face)      \n",
+        "\n",
+        "        combined = left_feat + right_feat + pose_feat + face_feat  \n",
+        "        segments = self.temporal_partition(combined)               \n",
+        "        final_feat = self.temporal_att(segments)                   \n",
         "        return final_feat\n",
         "\n",
         "# -----------------------------------------\n",
